articlejoe.com (archived on 2006-06-15)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 7356,
  "classifier_probability": 0.98,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 14.22,
  "homepage_snapshot_redirected_domain": "articlejoe.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20060401043656id_/http://www.articlejoe.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20060401043656id_/http%3A//articlejoe.com",
  "interval": "2006_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "articlejoe.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20060615024729id_/http%3A//www.articlejoe.com/privacy.php",
  "policy_title": "100% Free Article Directory at ArticleJoe.com",
  "policy_url": "articlejoe.com/privacy.php",
  "sha1": "35918398de8611c8002d240563622cd2e21c7c81",
  "simhash": 9702567681694338226,
  "simhash_updated": false,
  "site_hostname": "articlejoe.com",
  "site_url": "http://articlejoe.com",
  "smog": 15.2,
  "strict_updated": false,
  "timestamp": "20060615024729",
  "word_count": 1185,
  "year": 2006
}

--- a/a/ar/art/articlejoe.com.html
+++ b/a/ar/art/articlejoe.com.html
@@ -1,11 +1,13 @@
-<!--The following is the downloaded HTML source of the articlejoe.com privacy policy that was archived on 2005-12-30.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051230172405id_/http%3A//articlejoe.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the articlejoe.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615024729id_/http%3A//www.articlejoe.com/privacy.php) for the most accurate reproduction.-->
 
 <html><head>
 
 <meta http-equiv="Content-Language" content="en-us">
-
+<!--
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
+-->
+<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
 
 <meta name="DESCRIPTION" content="Free article submission for writers and authors. Free content for publishers and webmasters at ArticleJoe.com">
 
@@ -53,6 +55,7 @@ window.sidebar.addPanel(title, url, "")
 
 <body>
 <span id="xawmMenuPathImg-sliver" style="position:absolute;top:-50px"><img name="awmMenuPathImg-sliver" id="awmMenuPathImg-sliver" src="http://articlejoe.com/awmmenupath.gif" alt=""></span><script type="text/javascript">var MenuLinkedBy='AllWebMenus [4]', awmBN='624'; awmAltUrl='';</script><script charset="UTF-8" src="http://articlejoe.com/sliver.js" language="JavaScript1.2" type="text/javascript"></script><script type="text/javascript">awmBuildMenu();</script>
+
 <br>
 
 
@@ -89,7 +92,10 @@ Not a FREE member yet?&nbsp;&nbsp;<a href="http://articlejoe.com/signup.php">Sig
 
 <td><img bordercolor="#FFFFFF" border="0" src="http://www.articlejoe.com/images/trans.gif" width="100" height="1"></td>
 
-<td valign="middle" align="center"><script src="http://dennyhay.com/scroller/nb_js.php?nb_id=6" language="JavaScript"></script></td>
+<td align="center" valign="middle">&nbsp;
+</td>
+
+
 </tr>
 </tbody></table>
 </td>
@@ -116,7 +122,7 @@ Not a FREE member yet?&nbsp;&nbsp;<a href="http://articlejoe.com/signup.php">Sig
 </td>
 
 
-<form name="search" method="post" action="http://www.articlejoe.com/indexser.php"></form><input type="hidden" name="PHPSESSID" value="44c30d2aa40b56599c98570fa6858d11">
+<form name="search" method="post" action="http://www.articlejoe.com/indexser.php"></form><input type="hidden" name="PHPSESSID" value="80077dfa481fd0cd8fc356a5d8cc88ed">
 <td class="topnav">
 <input type="text" name="search" size="25" value="Article Search" style="font-family: verdana; font-size: 11px; color: #333333; border: 1px solid #C0C0C0">&nbsp;
 &nbsp;<input type="image" src="http://www.articlejoe.com/images/greenarrow.gif" alt="Go" bordercolor="#E9D9B2" border="0" style="vertical-align: bottom"></td>
@@ -360,7 +366,7 @@ create any contractual or other legal rights in or on behalf of any party.</p>
 <div class="spacer"></div>
 
 <li><h2>Publishers</h2></li>
-Get the free content you need for your websites, ezines and blogs via <a href="http://www.articlejoe.com/rssfeed.php">RSS</a>.
+Category <a href="http://www.articlejoe.com/rssfeed.php">RSS feeds</a>.
 </ul>
 
 <!--
@@ -385,7 +391,17 @@ Now you can MASS optimize all your 'Wordpress' blogs from one central location.
 
 
 
+<div class="spacer"></div>
 
+<ul>
+<li><h2>Resources</h2></li>
+<!--
+<SCRIPT LANGUAGE="JavaScript" SRC = "http://www.articlejoe.com/cgi-bin/ads/ads-rotator.cgi?clr=1&t=v&k1=&k2=&k3=">
+</SCRIPT>
+-->
+</ul>
+
+<div class="spacer"></div>
 <div class="spacer"></div>
 
 <div align="center">
@@ -405,6 +421,7 @@ google_color_text = "000000";
 <script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
 </script>
 </div>
+<script language="javascript" src="http://www.articlejoe.com/astracker/ast.php"></script>
 
 </td> <!-- End of Navigator -->
 </tr>
@@ -425,7 +442,13 @@ Reserved.<br>
 Use of our service is protected by our <a class="ftr" href="http://www.articlejoe.com/privacy.php">
 <span style="text-decoration: none">Privacy Policy</span></a> and
 <a class="ftr" href="http://www.articlejoe.com/terms.php"><span style="text-decoration: none">Terms of Service</span></a><br>
-100% Free Article Submission And Distribution</font></font></p>
+100% Free Article Submission And Distribution</font></font>
+
+<!--
+<div style="float: left;"><font color="#CDB599"><a href="http://www.wiredforauctions.com/" style="color: #CDB599;">Ebay Auction Tips</a> :: <a href="http://www.articlescoop.com/" style="color: #CDB599;">Free Article Directory</a></font></div>
+-->
+
+</p>
 
 
 </div>
