--- a/s/se/ser/serviceu.com.html
+++ b/s/se/ser/serviceu.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the serviceu.com privacy policy that was archived on 2005-12-30.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051230182247id_/http%3A//www.serviceu.com/Policies/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the serviceu.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615024730id_/http%3A//serviceu.com/Policies/privacy.htm) for the most accurate reproduction.-->
 
 <html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
