--- a/r/rs/rsc/rsc.org.html
+++ b/r/rs/rsc/rsc.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the rsc.org privacy policy that was archived on 2005-12-10.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051210191501id_/http%3A//rsc.org/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the rsc.org privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615024904id_/http%3A//www.rsc.org/help/privacy.asp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"><head>
 <meta http-equiv="content-type" content="text/html; charset=iso-8859-1">
@@ -9,9 +9,10 @@
 <link rel="stylesheet" href="/_stylesheets/rscextra.css" type="text/css">
 <link rel="stylesheet" href="/_stylesheets/print.css" type="text/css" media="print">
 <script type="text/javascript" language="Javascript" src="/binaries/commonjs_tcm15-6161.js"></script>
+<link rel="SHORTCUT ICON" href="http://www.rsc.org/favicon.ico" type="image/x-icon">
 </head>
 
-<body id="corporate" class="layout2">
+<body id="corporate" class="layout3">
 <div id="container">
 
 <div id="title">
@@ -39,7 +40,7 @@
 
 <form name="gs" method="GET" action="http://google.rsc.org/search">
 
-<input type="text" name="q" class="text" maxlength="256" value="Site Search" onclick="JavaScript:if(document.gs.q.value.indexOf('Site Search')!=-1){document.gs.q.value='';}" ;}"="">
+<input type="text" name="q" class="text" maxlength="256" value="Site Search" onclick="JavaScript:if(document.gs.q.value.indexOf('Site Search')!=-1){document.gs.q.value='';}">
                         &nbsp;<input type="image" class="submit" src="/images/designimages/submit_go_secbar_corporate_1.gif" alt="Go">
 
  <input type="hidden" name="ie" value="">
@@ -76,7 +77,7 @@
 </div> <!-- end #topnav -->
 
 
-<div id="breadcrumbs"><ul><li class="home"><a href="/">RSC</a></li><li>Privacy</li></ul></div><!-- end #breadcrumbs -->     
+<div id="breadcrumbs"><ul><li class="home"><a href="/">Home</a></li><li><a href="/Help/">Help</a></li></ul></div><!-- end #breadcrumbs -->     
 
 
 
@@ -88,8 +89,7 @@
        <div id="content">     
        <div>
 <h2>Privacy</h2><br>
-<div class="header2"><strong>How does the RSC use your Data?</strong></div><p>The RSC uses your personal data (e.g. name, address, email address, country of residence) to administer its activities, products, and services and to send information about them to you. The RSC may undertake communications on behalf of other organisations to selected contacts, customers, and members but only to those who have given their agreement to receiving such communications.</p><div class="header2"><strong>The Data We Collect about Users</strong></div><p>The RSC logs the Internet Protocol (IP) address of your PC to be able to receive and send information on the Internet.</p><p>The RSC collects personal data when your register or update your personal details using online forms.</p><div class="header2"><strong>Inaccuracies and corrections</strong></div><p>You can correct or update your personal data using the appropriate online form, by contacting the RSC using the email address on an online form, or if you are not sure whom to contact by emailing webmaster.</p><div class="header2"><strong>Security</strong></div><p>The RSC takes care to protect the data it collects about site users, using Secure Site License-approved technology where appropriate. Pages that use this technology are flagged with&nbsp;a padlock&nbsp;symbol as shown.&nbsp;</p><p><img title="Padlock" height="89" width="70" tcmuri="tcm:15-26561" src="/images/lock_tcm18-26561.gif"></p><div class="header2"><strong>Cookies</strong></div><p>A cookie is a text-only string of information that a website transfers to the cookie file of the browser on your computer's hard disk so that the website can remember who you are. A cookie will typically contain the name of the domain from which the cookie has come, the "lifetime" of the cookie, and a value, usually a randomly generated unique number.</p><p>Cookies can help a website to arrange content to match your preferred interests more quickly. Most major websites use cookies. Cookies cannot be used by themselves to identify you.&nbsp;</p><p>The RSC uses several types of cookie on its websites:&nbsp;<strong><em>Session Cookies</em></strong> are temporary cookies that remain in the cookie file of your browser until you leave the site,&nbsp;</p><ul><li>To allow you to carry information across pages of our site and avoid having to re-enter information;</li><li>To allow you to maintain a shopping basket;</li><li>Within registration to allow you to access stored information.&nbsp;&nbsp;&nbsp;</li></ul><p><strong><em>Persistent cookies</em></strong> remain in the cookie file of your browser for much longer (though how long will depend on the lifetime of the specific cookie).&nbsp;</p><ul><li>To help us recognise you as a unique visitor (just a number) when you return to our website and to allow us to tailor content or advertisements to match your preferred interests or to avoid showing you the same adverts repeatedly;</li><li>To compile anonymous, aggregated statistics that allow us to understand how users use our site and to help us improve the structure of our website. We cannot identify you personally in this way;</li><li>Within research surveys to ensure you are not invited to complete a questionnaire too often or after you have already done so.&nbsp;&nbsp;&nbsp;</li></ul><p><strong><em>Third-party cookies</em></strong> are used to control page content for a specific user:&nbsp;</p><ul><li>To serve advertisements on our sites and track whether these advertisements are clicked on by users;</li><li>To control how often you are shown a particular advertisement;</li><li>To tailor content to your preferences;</li><li>To count the number of anonymous users of our sites;</li><li>To provide security within shopping baskets, e.g. to pay for a membership subscription or a journal pay-per-view.&nbsp;&nbsp;&nbsp;</li></ul><p><strong><em>Disabling/Enabling Cookies</em></strong>. You have the ability to accept or decline cookies by modifying the settings in your browser. However, you may not be able to use all the interactive features of our site if cookies are disabled.&nbsp;</p><p>To find out how to disable/enable cookies, please consult the Help features of your browser.</p><div class="header2"><strong>E-mail communications</strong></div><p>Email communications are sent using secure technology that does not disclose your email address to any other recipient.&nbsp;</p><div class="header2"><strong>Disclose of Personal Data</strong></div><p>The RSC does not give or sell personal data about any of its contacts, collaborators, customers, or members to any individual or organisation unless they are involved in providing the RSC activities, products, or services. Such contractors are subject to a non-disclosure agreement and have to maintain the same security as does the RSC itself.</p><div class="header2"><strong>Direct marketing</strong></div><p>You can opt out of receiving information about any of these by changing your details using the appropriate online form or, if you are unsure, by contacting&nbsp;webmaster.</p><div class="header2"><strong>Links</strong></div><p>This privacy policy does not cover the links within this site linking to other sites.</p><div class="header2"><strong>Changes to this policy</strong></div><p>This policy is updated from time to time without notice. You may wish to bookmark this page for changes.</p>
-<div class="hilite"></div>
+<h3>How does the RSC use your Data?</h3><p>The RSC uses your personal data (e.g. name, address, email address, country of residence) to administer its activities, products, and services and to send information about them to you. The RSC may undertake communications on behalf of other organisations to selected contacts, customers, and members but only to those who have given their agreement to receiving such communications.</p><h3>The Data We Collect about Users</h3><p>The RSC logs the Internet Protocol (IP) address of your PC to be able to receive and send information on the Internet.</p><p>The RSC collects personal data when your register or update your personal details using online forms.</p><h3>Inaccuracies and corrections</h3><p>You can correct or update your personal data using the appropriate online form, by contacting the RSC using the email address on an online form, or if you are not sure whom to contact by emailing webmaster.</p><h3>Security</h3><p></p><div class="imgdivright"><img alt="Padlock image used to indicate Secure Site License-approved technology " name="Padlock" height="89" width="70" tcmuri="tcm:15-26561" src="/images/lock_tcm18-26561.gif"></div>The RSC takes care to protect the data it collects about site users, using Secure Site License-approved technology where appropriate. Pages that use this technology are flagged with&nbsp;a padlock&nbsp;symbol as shown.&nbsp;&nbsp;<p></p><h3>Cookies</h3><p>A cookie is a text-only string of information that a website transfers to the cookie file of the browser on your computer's hard disk so that the website can remember who you are. A cookie will typically contain the name of the domain from which the cookie has come, the "lifetime" of the cookie, and a value, usually a randomly generated unique number.</p><p>Cookies can help a website to arrange content to match your preferred interests more quickly. Most major websites use cookies. Cookies cannot be used by themselves to identify you.&nbsp;</p><p>The RSC uses several types of cookie on its websites:&nbsp;<strong><em>Session Cookies</em></strong> are temporary cookies that remain in the cookie file of your browser until you leave the site,&nbsp;</p><ul><li>To allow you to carry information across pages of our site and avoid having to re-enter information;</li><li>To allow you to maintain a shopping basket;</li><li>Within registration to allow you to access stored information.&nbsp;&nbsp;&nbsp;&nbsp;</li></ul><p><strong><em>Persistent cookies</em></strong> remain in the cookie file of your browser for much longer (though how long will depend on the lifetime of the specific cookie).&nbsp;</p><ul><li>To help us recognise you as a unique visitor (just a number) when you return to our website and to allow us to tailor content or advertisements to match your preferred interests or to avoid showing you the same adverts repeatedly;</li><li>To compile anonymous, aggregated statistics that allow us to understand how users use our site and to help us improve the structure of our website. We cannot identify you personally in this way;</li><li>Within research surveys to ensure you are not invited to complete a questionnaire too often or after you have already done so.&nbsp;&nbsp;&nbsp;&nbsp;</li></ul><p><strong><em>Third-party cookies</em></strong> are used to control page content for a specific user:&nbsp;</p><ul><li>To serve advertisements on our sites and track whether these advertisements are clicked on by users;</li><li>To control how often you are shown a particular advertisement;</li><li>To tailor content to your preferences;</li><li>To count the number of anonymous users of our sites;</li><li>To provide security within shopping baskets, e.g. to pay for a membership subscription or a journal pay-per-view.&nbsp;&nbsp;&nbsp;&nbsp;</li></ul><p><strong><em>Disabling/Enabling Cookies</em></strong>. You have the ability to accept or decline cookies by modifying the settings in your browser. However, you may not be able to use all the interactive features of our site if cookies are disabled.&nbsp;</p><p>To find out how to disable/enable cookies, please consult the Help features of your browser.</p><h3>Email communications</h3><p>Email communications are sent using secure technology that does not disclose your email address to any other recipient.&nbsp;</p><h3>Disclose of Personal Data</h3><p>The RSC does not give or sell personal data about any of its contacts, collaborators, customers, or members to any individual or organisation unless they are involved in providing the RSC activities, products, or services. Such contractors are subject to a non-disclosure agreement and have to maintain the same security as does the RSC itself.</p><h3>Direct marketing</h3><p>You can opt out of receiving information about any of these by changing your details using the appropriate online form or, if you are unsure, by contacting&nbsp;webmaster.</p><h3>Links</h3><p>This privacy policy does not cover the links within this site linking to other sites.</p><h3>Changes to this policy</h3><p>This policy is updated from time to time without notice. You may wish to bookmark this page for changes.</p>
 </div>
 
 <br>
@@ -97,6 +97,55 @@
        </div><!-- end #content -->
 	
 
+
+
+<div id="mainnav">
+
+
+<h3>Main Links</h3><ul><li>
+<a href="/Help/sitemap.asp" tcmuri="tcm:18-47341">Sitemap</a>
+</li><li>
+<a href="/Help/termsconditions.asp" tcmuri="tcm:18-11315">Terms &amp; Conditions</a>
+</li><li>
+<a href="/Help/privacy.asp" tcmuri="tcm:18-11314">Privacy</a>
+</li><li>
+<a href="/Help/accessibility.asp" tcmuri="tcm:18-11318">Accessibility</a>
+</li><li>
+<a href="/Help/SoftwareRequirements.asp" tcmuri="tcm:18-47201">Software Requirements</a>
+</li><li>
+<a href="/Help/Contacts.asp" tcmuri="tcm:18-48243">Contacts</a>
+</li></ul>
+
+
+
+
+<h3>Tools</h3>
+
+<script language="JavaScript1.2">
+<!--
+ 
+var DocTitle;
+DocTitle = document.title;
+DocTitle = DocTitle.replace('&',' ');
+document.write("<img src=\"/images/designimages/icon_email.gif\" alt=\"Email Icon\" border=\"0\">&nbsp;");
+document.write("<A href=\"#\" onClick=\"javascript: popwindow('/Email_Friend.asp?Title=' + DocTitle + '&URL=http://www.rsc.org/help/privacy.asp');\">Email this to a friend</a>");
+ 
+//-->
+</script><img src="/images/designimages/icon_email.gif" alt="Email Icon" border="0">&nbsp;<a href="#" onclick="javascript: popwindow('/Email_Friend.asp?Title=' + DocTitle + '&amp;URL=http://www.rsc.org/help/privacy.asp');">Email this to a friend</a>
+ 
+<noscript>
+<img src="/images/designimages/icon_email.gif" alt="Email Icon" border="0">&nbsp;
+<A target="_new" href="/Email_Friend.asp?Title=Royal%20Society%20of%20Chemistry%20Website&URL=http://www.rsc.org/help/privacy.asp');">Email this to a friend</a>
+</noscript>
+
+
+
+
+
+<br class="cl"> <!-- Also stops #footer floating up in NS 6 -->
+
+</div><!-- end #mainnav -->
+	
 	
 
     <br class="cl"> <!-- Also stops #footer floating up in NS 6 -->
@@ -134,7 +183,7 @@
    <select id="role" name="role">
    <option value="" selected="selected">Select a role</option>
    
-   <option value="/Publishing/ReSourCe/resource.asp">Authors</option><option value="/Publishing/librarians/index.asp">Librarians</option><option value="/ConferencesAndEvents/index.asp">Conference Attendees</option><option value="/Membership/index.asp">Members</option><option value="/Publishing/ReSourCe/resource.asp">Referees</option><option value="/Education/SchoolStudents/index.asp">School Students</option><option value="/Education/Teachers/index.asp">Teachers</option><option value="/Education/HEstudents/index.asp">HE Students</option><option value="/Education/HElecturers/index.asp">HE Lecturers</option>   
+   <option value="/Publishing/ReSourCe/resource.asp">Authors</option><option value="/Publishing/librarians/index.asp">Librarians</option><option value="/ConferencesAndEvents/index.asp">Conference Attendees</option><option value="/Membership/index.asp">Members</option><option value="/Publishing/ReSourCe/resource.asp">Referees</option><option value="/Education/SchoolStudents/index.asp">School Students</option><option value="/Education/Parents/index.asp">Parents/Guardians</option><option value="/ScienceAndTechnology/SME/index.asp">Small Business</option><option value="/Education/Teachers/index.asp">Teachers</option><option value="/Education/HEstudents/index.asp">HE Students</option><option value="/Education/HElecturers/index.asp">HE Lecturers</option>   
     </select> <input type="image" class="submit-select" src="/images/designimages/submit_go_corporate.gif" alt="Go" onclick="JavaScript:redirect('frmrole','role'); return false;" onkeypress="JavaScript:redirect('frmrole','role');">
    </p>
 </form>
@@ -144,7 +193,7 @@
       <label for="prod"></label>
       <select id="prod" name="prod">
       <option value="" selected="selected">Select a product</option>
-       <option value="/ConferencesAndEvents/index.asp">Conferences &amp; Events</option><option value="/Publishing/Books/index.asp">Books</option><option value="/chemistryworld/index.asp">Chemistry World</option><option value="/Publishing/CurrentAwareness/index.asp">Databases</option><option value="/Publishing/Journals/Index.asp">Journals</option><option value="/Publishing/Magazines/index.asp">Magazines</option>   
+       <option value="/ConferencesAndEvents/index.asp">Conferences &amp; Events</option><option value="/Publishing/Books/merlintest.asp">Books</option><option value="/chemistryworld/index.asp">Chemistry World</option><option value="/Publishing/CurrentAwareness/index.asp">Databases</option><option value="/Publishing/Journals/Index.asp">Journals</option><option value="/Publishing/Magazines/index.asp">Magazines</option>   
       </select> <input type="image" class="submit-select" src="/images/designimages/submit_go_corporate.gif" alt="Go" onclick="JavaScript:redirect('frmprod','prod'); return false;" onkeypress="JavaScript:redirect('frmprod','prod');">
 </p>
 </form>
@@ -165,9 +214,9 @@
 <br class="cl">
 <div id="footer">
    <div class="left">
-   <font color="white">|&nbsp;</font><a href="/termsconditions.asp" title="">Terms &amp; Conditions</a>&nbsp;|&nbsp;<a href="/privacy.asp" title="">Privacy</a> | <a href="/accessibility.asp" title="">Accessibility</a> | <a href="/help.asp" title="">Help</a><font color="white">&nbsp;|</font>
+   &nbsp; <a href="/help/termsconditions.asp" title="">Terms &amp; Conditions</a>&nbsp;|&nbsp;<a href="/help/privacy.asp" title="">Privacy</a> | <a href="/help/accessibility.asp" title="">Accessibility</a> | <a href="/help/" title="">Help</a>
    </div>
-   <div class="right">© Royal Society of Chemistry 2005</div>
+   <div class="right">© Royal Society of Chemistry 2006</div>
 </div> <!-- end #footer -->
 
 
