hopto.org (archived on 2006-06-15)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": false,
  "categories": "informationtech",
  "char_count": 4763,
  "classifier_probability": 1.0,
  "cross_domain_homepage_redir": true,
  "flesch_ease": "difficult",
  "flesch_kincaid": 10.58,
  "homepage_snapshot_redirected_domain": "no-ip.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20060423153725id_/http://www.no-ip.com/hopto.php",
  "homepage_snapshot_url": "https://web.archive.org/web/20060506090413id_/http%3A//hopto.org",
  "interval": "2006_A",
  "link_text": "Privacy Policy",
  "parked_domain": true,
  "phase": "A",
  "policy_domain": "no-ip.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20060615024929id_/http%3A//www.no-ip.com/legal/privacy.php",
  "policy_title": "No-IP.com - The Dynamic DNS Leader",
  "policy_url": "no-ip.com/legal/privacy.php",
  "sha1": "dcb5f1706cce5dda8eb48df55050a3ea88045b03",
  "simhash": 15988064757095315848,
  "simhash_updated": false,
  "site_hostname": "hopto.org",
  "site_url": "http://hopto.org",
  "smog": 13.82,
  "strict_updated": false,
  "timestamp": "20060615024929",
  "word_count": 795,
  "year": 2006
}

--- a/h/ho/hop/hopto.org.html
+++ b/h/ho/hop/hopto.org.html
@@ -1,40 +1,39 @@
-<!--The following is the downloaded HTML source of the hopto.org privacy policy that was archived on 2005-03-05.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20050305235847id_/http%3A//www.no-ip.com/legal/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the hopto.org privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615024929id_/http%3A//www.no-ip.com/legal/privacy.php) for the most accurate reproduction.-->
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
 	<title> No-IP.com - The Dynamic DNS Leader</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 	<meta http-equiv="Description" content="">
 	<meta http-equiv="Keywords" content="">
 		<link rel="STYLESHEET" type="text/css" href="/styles/noip.css">
+	<link rel="STYLESHEET" type="text/css" href="/styles/rounded.css">
 	<script language="javascript" type="text/javascript" src="/scripts/mouseover.js"></script>
-<script language="JavaScript">
-<!-- Begin
-function popupPage(page) {
-windowprops = "height=250,width=275,location=no," + "scrollbars=yes,menubars=no,toolbars=no,resizable=yes";
-window.open(page, "Popup", windowprops);
-}
-//  End -->
-</script><script language="JavaScript">
+	<script language="javascript" type="text/javascript" src="/scripts/rounded.js"></script>
+	<script language="javascript" type="text/javascript" src="/scripts/helpers.js"></script>
+			<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+	</script>
+	<script type="text/javascript">
+	_uacct = "UA-31174-1";
+	urchinTracker();
+	</script>
+	<script language="javascript" type="text/javascript">
 function placeFocus() {
 document.login.username.focus();}
 </script></head>
 
 
-
-
-
-
-
-<body marginheight="0" marginwidth="0" leftmargin="0" topmargin="0" background="/homeparts/background.gif" bgcolor="#FFFFFF" onload="menu_setup();">
-<table height="100%" align="center" width="721" cellpadding="0" cellspacing="0" border="0"><tbody><tr><td width="1" bgcolor="white"></td><td width="1" bgcolor="dddddd"></td><td bgcolor="F5F5F5" width="717" valign="top"><!-- logo + navigation --><table width="717" cellspacing="0" cellpadding="0" border="0">
+<body marginheight="0" marginwidth="0" leftmargin="0" topmargin="0" background="/homeparts/background.gif" bgcolor="#ffffff" onload="menu_setup();">
+<div id="layoutContainer">
+<table height="100%" align="center" width="721" cellpadding="0" cellspacing="0" border="0" bgcolor="#F5F5F5"><tbody><tr><td width="1" bgcolor="white"></td><td width="1" bgcolor="#dddddd"></td><td bgcolor="#f5f5f5" width="717" valign="top"><!-- logo + navigation --><table width="717" cellspacing="0" cellpadding="0" border="0">
 <tbody><tr>
     <td rowspan="2"><a href="/index.php"><img src="/homeparts/logo.gif" width="183" height="63" border="0" alt="No-IP.com"></a></td>
     <td colspan="6"><img src="/homeparts/nav_top.jpg" width="534" height="41" border="0" alt="No-IP.com"></td>
 </tr>
 <tr>
-    <td><a href="/index.php" onmouseover="menu_over('yournoip');" onmouseout="menu_out('yournoip');"><img src="/nav/yournoip_off.gif" border="0" alt="Your No-IP" name="yournoip" width="89" height="22"></a></td> <td><a href="/support.php" onmouseover="menu_over('support');" onmouseout="menu_out('support');"><img src="/nav/support_off.gif" border="0" alt="Support" name="support" width="75" height="22"></a></td>
-    <td><a href="/services.php" onmouseover="menu_over('services');" onmouseout="menu_out('services');"><img src="/nav/services_off.gif" border="0" alt="Services" name="services" width="74" height="22"></a></td>
+    <td><a href="/" onmouseover="menu_over('yournoip');" onmouseout="menu_out('yournoip');"><img src="/nav/yournoip_off.gif" border="0" alt="Your No-IP" name="yournoip" width="89" height="22"></a></td> 
+    <td><a href="/services/" onmouseover="menu_over('services');" onmouseout="menu_out('services');"><img src="/nav/services_off.gif" border="0" alt="Services" name="services" width="74" height="22"></a></td>
+    <td><a href="/support/" onmouseover="menu_over('support');" onmouseout="menu_out('support');"><img src="/nav/support_off.gif" border="0" alt="Support" name="support" width="75" height="22"></a></td>
     <td><a href="/downloads.php" onmouseover="menu_over('downloads');" onmouseout="menu_out('downloads');"><img src="/nav/downloads_off.gif" border="0" alt="Downloads" name="downloads" width="98" height="22"></a></td>
     <td><a href="/company.php" onmouseover="menu_over('company');" onmouseout="menu_out('company');"><img src="/nav/company_off.gif" border="0" alt="Company" name="company" width="79" height="22"></a></td>
     <td><img src="/homeparts/nav_right.gif" width="119" height="22" border="0" alt=""></td>
@@ -82,7 +81,7 @@ document.login.username.focus();}
 		<td><img src="/homeparts/login_divider.gif" width="2" height="21" border="0" alt="" hspace="9"></td>
 		<td align="center" nowrap="">&nbsp;&nbsp;&nbsp;<a href="/forgotPw.php" class="small">Lost Password?</a><br>
 		<img src="/clear.gif" width="1" height="2" border="0" alt=""><br>&nbsp;&nbsp;
-		<a href="/newUser.php" class="smallbold">Sign-up Free!</a></td>
+		<a href="/newUser.php" class="smallbold">Sign-up Now!</a></td>
 		<!-- <TD><IMG SRC="/homeparts/login_divider.gif" WIDTH="2" HEIGHT="21" BORDER="0" ALT="" HSPACE="9"></TD> -->
 	</tr>
 	</tbody></table>
@@ -96,20 +95,22 @@ document.login.username.focus();}
 		<td><input type="text" name="dom" value="" class="search_box" size="22"></td>
 		<td>&nbsp;.&nbsp;</td>
 		<td><select name="tld" class="small">
-<option biz="">biz
-</option><option cc="">cc
-</option><option com="" selected="">com
-</option><option info="">info
-</option><option net="">net
-</option><option org="">org
-</option><option tv="">tv
-</option><option us="">us
-</option><option ws="">ws
+<option value="biz">biz
+</option><option value="cc">cc
+</option><option value="com" selected="">com
+</option><option value="info">info
+</option><option value="net">net
+</option><option value="org">org
+</option><option value="tv">tv
+</option><option value="us">us
+</option><option value="ws">ws
 </option></select></td>
 		<td><input type="image" src="/homeparts/button_search.gif" width="58" height="18" border="0" alt="Search" name="dsearch"><input type="hidden" name="submit" value="1"><input type="hidden" name="sid" value=""></td>
-		<td><img src="/clear.gif" width="5" height="1" border="0" alt=""></td>
+		<td><img src="/clear.gif" width="5" height="1" border="0" alt="">
+		</td>
 	</tr>
-		</tbody></table>
+		
+	</tbody></table>
 	</td>
 </tr>
 </tbody></table>
@@ -118,7 +119,7 @@ document.login.username.focus();}
 	<td><img src="/homeparts/login_divider_horizontal.gif" width="717" height="12" border="0" alt=""></td>
 </tr>
 </tbody></table>
-
+<div id="mainContent">
 
 
 <table width="700" cellspacing="0" cellpadding="0" border="0">
@@ -127,7 +128,7 @@ document.login.username.focus();}
 	<td bgcolor="#FFFFFF" width="680" valign="top"><img src="/clear.gif" width="697" height="21" border="0" alt="">
 
 
-<!---- BEGIN CONTENT -->
+<!-- BEGIN CONTENT -->
 <img src="/homeparts/dot.gif" width="13" height="12" border="0" alt=""><span class="textheader">No-IP.com Privacy Policy</span>
 <p>No-IP.com has drafted this document, which details how we gather and
 disseminate information, in an effort to demonstrate our strong
@@ -249,27 +250,32 @@ info@no-ip.com<br>
 702-459-8644 fax<br></ul>
 </td></tr></tbody></table>
  
-<table width="717" cellspacing="0" cellpadding="0" border="0">
+</div><!-- div#mainContent -->
+<table width="717" cellspacing="0" cellpadding="0" border="0" bgcolor="#F5F5F5">
 <tbody><tr>
 	<td><img src="/homeparts/footer.gif" width="717" height="58" border="0" alt=""></td>
 </tr>
 <tr>
-	<td align="center">©1999-2005 No-IP.com - Vitalwerks Internet Solutions, LLC. All Rights Reserved.<br>
-	<a href="/legal/tos.php">Terms of Service</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="/legal/privacy.php">Privacy Policy</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="/company.php?page=contact">Contact Us</a><!-- &nbsp;&nbsp;|&nbsp;&nbsp;<A HREF="/credits/index.php">Credits</A> -->&nbsp;&nbsp;|&nbsp;&nbsp;<a href="/support.php?page=status">System Status</a>
-	<br><br>Current Time: Sat Mar 5 15:58:47 PST<br>
+	<td align="center">©1999-2006 No-IP.com - Vitalwerks Internet Solutions, LLC. All Rights Reserved.<br>
+	<a href="/legal/tos.php">Terms of Service</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="/legal/privacy.php">Privacy Policy</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="/company.php?page=contact">Contact Us</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="/site_map.php">Site Map</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="/blog/">Blog</a>
+<p>
+	<!-- START SCANALERT CODE -->
+<a target="_blank" href="https://www.scanalert.com/RatingVerify?ref=www.no-ip.com"><img width="65" height="37" border="0" src="//images.scanalert.com/meter/www.no-ip.com/31.gif" alt="HACKER SAFE certified sites prevent over 99.9% of hacker crime." oncontextmenu="alert('Copying Prohibited by Law - HACKER SAFE is a Trademark of ScanAlert'); return false;"></a>
+<!-- END SCANALERT CODE -->
+</p>
+	Current Time: Wed Jun 14 19:49:29 PDT<br>
 	</td>
 </tr>
 <tr>
-	<td><img src="/clear.gif" width="717" height="20" border="0" alt=""></td>
+	<td height="100%"><img src="/clear.gif" width="717" height="20" border="0" alt=""></td>
 </tr>
 </tbody></table>
-</td><td width="1" bgcolor="dddddd"></td><td width="1" bgcolor="white"></td>
+</td><td width="1" bgcolor="#dddddd"></td><td width="1" bgcolor="white"></td>
 </tr>
+<tr bgcolor="#dddddd" height="1"><td colspan="3" height="1"></td></tr>
 </tbody></table>
 
+</div>
 
-
-
- 
 
 </body></html>
