--- a/a/ad/adi/adirect2z.com.html
+++ b/a/ad/adi/adirect2z.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the adirect2z.com privacy policy that was archived on 2005-12-20.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051220132333id_/http%3A//adirect2z.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the adirect2z.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615024941id_/http%3A//www.adirect2z.com/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"><head>
 <meta http-equiv="content-type" content="text/html;charset=iso-8859-1">
