--- a/l/li/liv/liveabroad.com.html
+++ b/l/li/liv/liveabroad.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the liveabroad.com privacy policy that was archived on 2005-12-30.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051230195338id_/http%3A//www.liveabroad.com/privacy_policy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the liveabroad.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615025149id_/http%3A//liveabroad.com/privacy_policy.html) for the most accurate reproduction.-->
 
 <html><head>
 <title>Privacy Policy</title>
