--- a/o/ol/old/oldversion.com.html
+++ b/o/ol/old/oldversion.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the oldversion.com privacy policy that was archived on 2005-12-29.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051229054239id_/http%3A//www.oldversion.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the oldversion.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615025636id_/http%3A//www.oldversion.com/privacy.php) for the most accurate reproduction.-->
 
 <html><head>
 <title>OldVersion.com</title>
@@ -104,28 +104,34 @@ BODY {
 <body text="#000000" link="#006699" vlink="#006699" bgcolor="#CCCCCC" leftmargin="5" topmargin="5" marginheight="5" marginwidth="5" background="images/grid.gif">
 <center>
 
-<script type="text/javascript"><!--
-google_ad_client = "pub-5954470155829380";
-google_ad_width = 728;
-google_ad_height = 90;
-google_ad_format = "728x90_as";
-google_ad_type = "text_image";
-google_ad_channel ="";
-//--></script>
-<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-</script>
+        <script type="text/javascript"><!--
+        google_ad_client = "pub-5954470155829380";
+        google_ad_width = 728;
+        google_ad_height = 90;
+        google_ad_format = "728x90_as";
+        google_ad_type = "text_image";
+        google_ad_channel ="";
+        google_color_border = "487398";
+        google_color_bg = "FFFFFF";
+        google_color_link = "0000FF";
+        google_color_url = "008000";
+        google_color_text = "000000";
+        //--></script>
+        <script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+        </script>
+
 	
 <table cellspacing="0" cellpadding="0" border="0" width="754" height="5">
 <tbody><tr><td align="CENTER" valign="MIDDLE"></td></tr>
 </tbody></table>
 
-<table cellspacing="0" cellpadding="2" border="0" width="754" bgcolor="#999999">
+<table cellspacing="0" cellpadding="2" border="0" width="790" bgcolor="#999999">
 <tbody><tr>
 <td align="CENTER" valign="MIDDLE">
 
-<table cellspacing="0" cellpadding="0" border="0" width="750" bgcolor="#FFFFFF">
+<table cellspacing="0" cellpadding="0" border="0" width="790" bgcolor="#FFFFFF">
 <tbody><tr>
-<td width="750" height="40" align="CENTER" valign="BOTTOM">
+<td width="790" height="40" align="CENTER" valign="BOTTOM">
 
 <table cellspacing="0" cellpadding="0" border="0" width="750" height="35" bgcolor="#FFFFFF">
 <tbody><tr>
@@ -143,9 +149,9 @@ google_ad_channel ="";
 </td>
 </tr>
 <tr>
-<td width="750" height="27" align="BOTTOM" valign="MIDDLE">
+<td width="790" height="27" align="BOTTOM" valign="MIDDLE">
 
-<table cellspacing="0" cellpadding="0" border="0" width="750" height="27" bgcolor="#487398">
+<table cellspacing="0" cellpadding="0" border="0" width="790" height="27" bgcolor="#487398">
 <form method="get" action="program.php"></form>
 <tbody><tr>
 <td width="10" height="27" align="CENTER" valign="MIDDLE">&nbsp;</td>
@@ -159,63 +165,91 @@ google_ad_channel ="";
 <a href="about.php">&nbsp;ABOUT&nbsp;</a>
 </span>
 </td>
-<td width="330" height="27" align="RIGHT" valign="MIDDLE">
+<td width="360" height="27" align="RIGHT" valign="MIDDLE">
 
 <select name="n" class="dropdown">
 <option value="" selected="selected"></option>
 <option value="3cdaemon">3Com Daemon</option>
+<option value="ac3filter">AC3Filter</option>
 <option value="acdsee">ACDSee</option>
 <option value="acrobat">Acrobat Reader</option>
 <option value="adaware">Ad-aware</option>
+<option value="alcohol120">Alcohol 120</option>
 <option value="aol">America Online</option>
 <option value="aim">AOL Instant Messenger</option>
+<option value="audacity">Audacity</option>
 <option value="bitcomet">BitComet</option>
 <option value="bitspirit">BitSpirit</option>
+<option value="bittorent">BitTorrent</option>
+<option value="bpftpserver">BPFTP Server</option>
+<option value="bsplayer">BSplayer</option>
 <option value="bpftp">BulletProof FTP</option>
+<option value="ccleaner">CCleaner</option>
 <option value="ciscotftp">Cisco TFTP Server</option>
 <option value="clonecd">CloneCD</option>
 <option value="cserve">CompuServe</option>
+<option value="cuteftp">CuteFTP</option>
 <option value="cutemx">CuteMX</option>
 <option value="dcpp">DC++</option>
 <option value="deadaim">DeadAIM</option>
 <option value="directx">DirectX</option>
 <option value="divx">DivX</option>
+<option value="edonkey">eDonkey2000</option>
+<option value="emule">eMule</option>
 <option value="eudora">Eudora</option>
+<option value="everesthome">Everest Home Edition</option>
+<option value="etncreator">Express Thumbnail Creator</option>
 <option value="webpics">Express WebPictures</option>
 <option value="getright">GetRight</option>
+<option value="goldwave">GoldWave</option>
 <option value="gozilla">GoZilla</option>
 <option value="icq">ICQ</option>
 <option value="icqlite">ICQ Lite</option>
 <option value="imesh">iMesh</option>
+<option value="incredimail">IncrediMail</option>
 <option value="msie">Internet Explorer</option>
 <option value="irfanview">IrfanView</option>
 <option value="itunes">iTunes</option>
+<option value="java">Java Platform</option>
+<option value="jetaudio">jetAudio</option>
 <option value="juno">Juno</option>
 <option value="jv16">jv16 PowerTools</option>
 <option value="kazaa">Kazaa</option>
 <option value="kazaalite">Kazaa Lite</option>
 <option value="limewire">LimeWire</option>
+<option value="dreamweaver">Macromedia Dreamweaver</option>
+<option value="fireworks">Macromedia Fireworks</option>
+<option value="flash">Macromedia Flash</option>
+<option value="flashp">Macromedia Flash Player</option>
 <option value="msjavavm">Microsoft Java VM</option>
 <option value="mirc">mIRC</option>
 <option value="morpheus">Morpheus</option>
 <option value="firefox">Mozilla Firefox</option>
+<option value="mp3doctor">Mp3Doctor</option>
 <option value="msnm">MSN Messenger</option>
 <option value="mmatch">MusicMatch Jukebox</option>
 <option value="napster">Napster</option>
 <option value="nero">Nero</option>
 <option value="opera">Opera</option>
+<option value="paintdotnet">Paint.NET</option>
+<option value="pdfrecovery">PDF Password Recovery</option>
 <option value="powarc">PowerArchiver</option>
 <option value="quicktime">QuickTime</option>
 <option value="rjukebox">RealJukebox</option>
 <option value="real">RealPlayer</option>
+<option value="realalt">RealPlayer Alternative</option>
 <option value="scour">Scour Exchange</option>
+<option value="searchmp">Search Maker Pro</option>
 <option value="skype">Skype</option>
 <option value="solarwindstftp">SolarWinds TFTP</option>
 <option value="spybot">Spybot</option>
 <option value="swish">Swish</option>
-<option value="sygate">Sygate Firewall</option>
+<option value="sygate">Sygate Personal Firewall</option>
 <option value="teratermpro">Tera Term Pro</option>
 <option value="terragen">Terragen</option>
+<option value="tpfirewall">Tiny Personal Firewall</option>
+<option value="trillian">Trillian</option>
+<option value="utorrent">uTorrent</option>
 <option value="ventrilo">Ventrilo</option>
 <option value="virtualdub">VirtualDub</option>
 <option value="winace">WinAce</option>
@@ -240,10 +274,10 @@ google_ad_channel ="";
 </td>
 </tr>
 <tr>
-<td width="750" height="15" bgcolor="#FFFFFF"><img src="images/white.gif" width="1" height="1" border="0"></td>
+<td width="790" height="15" bgcolor="#FFFFFF"><img src="images/white.gif" width="1" height="1" border="0"></td>
 </tr>
 <tr>
-<td width="750" align="CENTER" valign="MIDDLE">
+<td width="790" align="CENTER" valign="MIDDLE">
 
 <table cellspacing="0" cellpadding="0" border="0" width="720" bgcolor="#FFFFFF">
 <tbody><tr>
@@ -306,9 +340,9 @@ If you have any questions about this privacy statement, the practices of this si
 <!-- SiteSearch Google -->
 </td>
 </tr>
-<tr>
-<td width="750" height="15" bgcolor="#FFFFFF"><img src="images/white.gif" width="1" height="1" border="0"></td>
-</tr>
+
+<!-- <TR><TD WIDTH="750" HEIGHT="15" BGCOLOR="#FFFFFF"><IMG SRC="images/white.gif" WIDTH="1" HEIGHT="1" BORDER="0"></TD></TR> -->
+
 </tbody></table>
 
 </td>
@@ -317,9 +351,14 @@ If you have any questions about this privacy statement, the practices of this si
 <br>
 
 <span class="bottomtext">
-Copyright © 2001-2005 OldVersion.com. All trademarks are the 
-property of their respective owners. <a href="http://www.oldversion.com/privacy.php">Privacy policy</a>.</span>
+Copyright © 2001-2006 OldVersion.com. All trademarks are the property of their respective owners. <a href="http://www.oldversion.com/privacy.php">Privacy policy</a>.</span>
 </center>
+<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+</script>
+<script type="text/javascript">
+_uacct = "UA-247889-1";
+urchinTracker();
+</script>
 
 
 </body></html>
