bizland.com (archived on 2006-06-15)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;informationtech",
  "char_count": 3980,
  "classifier_probability": 0.99,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.08,
  "homepage_snapshot_redirected_domain": "bizland.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20060329015403id_/http://www.bizland.com/bizland/index.bml",
  "homepage_snapshot_url": "https://web.archive.org/web/20060402202050id_/http%3A//bizland.com",
  "interval": "2006_A",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "bizland.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20060615025737id_/http%3A//www.bizland.com/about/privacy.bml",
  "policy_title": "Privacy Statement",
  "policy_url": "bizland.com/about/privacy.bml",
  "sha1": "4297384857248944608cb861288792f475b5c263",
  "simhash": 12106688839476114028,
  "simhash_updated": false,
  "site_hostname": "bizland.com",
  "site_url": "http://bizland.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20060615025737",
  "word_count": 639,
  "year": 2006
}

--- a/b/bi/biz/bizland.com.html
+++ b/b/bi/biz/bizland.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the bizland.com privacy policy that was archived on 2005-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051216235941id_/http%3A//www.bizland.com/about/privacy.bml) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the bizland.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615025737id_/http%3A//www.bizland.com/about/privacy.bml) for the most accurate reproduction.-->
 
 <html><head>
     <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
@@ -112,7 +112,7 @@
 	.prodDesc {FONT-SIZE: 12px; COLOR: #000000; FONT-FAMILY: Arial,sans serif}
 	
 	.marginboxhead { background-color:#990000; FONT-FAMILY: Arial, helvetica, sans serif; font-size:12px; COLOR: #FFFFFF; font-weight: bold;padding: 1px 1px 1px 1px;}
-	.marginbox {FONT-SIZE: 8pt; COLOR: black; FONT-FAMILY: Arial, helvetica, sans serif; background: #FFFFFF}}
+	.marginbox {FONT-SIZE: 8pt; COLOR: black; FONT-FAMILY: Arial, helvetica, sans serif; background: #FFFFFF;}
 	.instructionboxhead { background-color:#990000; FONT-FAMILY: Arial, helvetica, sans serif; font-size:12px; COLOR: #FFFFFF; font-weight: bold;padding: 1px 1px 1px 1px;}
 	.instructionbox {FONT-SIZE: 8pt; COLOR: black; FONT-FAMILY: Arial, helvetica, sans serif, sans-serif; background: #FFFFFF}
 	.articleboxhead { background-color:#990000; FONT-FAMILY: Arial, helvetica, sans serif; font-size:12px; COLOR: #FFFFFF; font-weight: bold;padding: 1px 1px 1px 1px;}
@@ -164,7 +164,7 @@
                 <td>
                   <a href="/"><img src="http://images.bizland.com/logos/logo_bizland.gif" border="0"></a>
                 </td>
-                <td align="right"><img src="http://images.bizland.com/text/bl_phonenumber.gif" border="0"></td>
+                <td align="right"><img src="/images/text/bl_phonenumber.gif" border="0"></td>
               </tr>
             </tbody></table>
             <table width="775" cellpadding="0" cellspacing="0" border="0">
@@ -331,7 +331,7 @@ At BizLand, we are committed to protecting your privacy.  The limited informatio
                 <td valign="absmiddle" align="center" background="/images/backgrounds/bg_bl_footer.gif">
                   <table width="95%" class="footer" cellpadding="0" cellspacing="0">
                     <tbody><tr>
-                      <td>Copyright © 2005 BizLand. All rights reserved.</td>
+                      <td>Copyright © 2006 BizLand. All rights reserved.</td>
                       <td align="right">
                         <a href="/bizland/about.bml">About Us</a> 
 							| <a href="/referral/programs.bml">Referral Programs</a>
