shoutmix.com (archived on 2006-06-15)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 1803,
  "classifier_probability": 0.97,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.23,
  "homepage_snapshot_redirected_domain": "shoutmix.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20060402214324id_/http://shoutmix.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20060402214324id_/http%3A//shoutmix.com",
  "interval": "2006_A",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "shoutmix.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20060615025839id_/http%3A//www.shoutmix.com/shoutbox/privacy",
  "policy_title": "ShoutMix - Free shoutbox hosting service.",
  "policy_url": "shoutmix.com/shoutbox/privacy",
  "sha1": "4c2056c6f6f9f66b466f392f6f27394d0f601d56",
  "simhash": 10934068487027994322,
  "simhash_updated": false,
  "site_hostname": "shoutmix.com",
  "site_url": "http://shoutmix.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20060615025839",
  "word_count": 303,
  "year": 2006
}

--- a/s/sh/sho/shoutmix.com.html
+++ b/s/sh/sho/shoutmix.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the shoutmix.com privacy policy that was archived on 2005-12-20.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051220191011id_/http%3A//www.shoutmix.com/shoutbox/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the shoutmix.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615025839id_/http%3A//www.shoutmix.com/shoutbox/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <title>ShoutMix - Free shoutbox hosting service.</title>
@@ -9,8 +9,8 @@
 <meta name="publisher" content="ShoutMix Shoutbox">
 <meta name="copyright" content="ShoutMix Shoutbox">
 <meta name="keywords" content="Shoutbox, Shoutboxes, Shout, Chat, Tagboard, Chatbox, Chatterbox, Talkbox, Messagebox, Floodbox, Shoutmix, Free Shoutbox, Remote Hosted, PHP, Website">
-<meta name="description" content="Free shoutbox! Fully customizable remote hosted shoutbox system for your website!">
-<meta name="abstract" content="Free shoutbox! Fully customizable remote hosted shoutbox system for your website!">
+<meta name="description" content="Free shoutbox! Fully customizable shoutbox system for your website! Dedicated and advanced shoutbox hosting service.">
+<meta name="abstract" content="Free shoutbox! Fully customizable shoutbox system for your website! Dedicated and advanced shoutbox hosting service.">
 <meta name="page-topic" content="Internet">
 <meta name="rating" content="General">
 <meta name="robots" content="index,follow">
@@ -94,7 +94,7 @@ google_color_text = "333333";
 	<div id="panel">
 <h1>Demo Shoutbox</h1>
 <div class="bar">
-	<div class="note"><a href="/shoutbox/contact?PHPSESSID=ee1ba09d40f5f39342928b88848de3fa">For enquiries, please use the contact form. Thank you.</a></div>
+	<div class="note"><a href="/shoutbox/contact">For enquiries, please use the contact form. Thank you.</a></div>
 	<!-- Start Shoutbox Include -->
 	<iframe src="http://www.shoutmix.com/box/test/" width="160" height="460" scrolling="yes" frameborder="0">
 	<p><a href="http://www.shoutmix.com/box/test/">View shoutbox</a></p>
@@ -120,7 +120,7 @@ google_color_text = "333333";
 	| <a href="http://www.shoutmix.com/shoutbox/tos">Terms of Service</a>
 	| <a href="http://www.shoutmix.com/shoutbox/privacy">Privacy</a>
 	| <a href="http://www.exabytes.com" onclick="top.location.href='http://www.exabytes.com'; return false">Hosted by Exabytes</a><br>
-	© 2004-2005 ShoutMix. All rights reserved.</p>
+	© 2004-2006 ShoutMix. All rights reserved.</p>
 </div>
 </div> 
 
