--- a/f/fb/fbo/fbo.gov.html
+++ b/f/fb/fbo/fbo.gov.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the fbo.gov privacy policy that was archived on 2005-12-31.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051231221011id_/http%3A//www.fbo.gov/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the fbo.gov privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615030128id_/http%3A//fbo.gov/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
 
@@ -207,7 +207,7 @@
 
                 <tr> 
 
-                  <td><img src="Images/blue.gif" width="7" height="10" alt="graphic - arrow"> <a class="links" href="https://www1.fbo.gov/servlet/slog">FedBizOpps 
+                  <td><img src="Images/blue.gif" width="7" height="10" alt="graphic - arrow"> <a class="links" href="https://www2.fbo.gov/servlet/slog">FedBizOpps 
                     Buyers</a></td>
 
                 </tr>
