--- a/o/ox/ox./ox.ac.uk.html
+++ b/o/ox/ox./ox.ac.uk.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the ox.ac.uk privacy policy that was archived on 2005-12-28.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051228134528id_/http%3A//www.admin.ox.ac.uk/councilsec/privacy.shtml) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ox.ac.uk privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615030515id_/http%3A//www.admin.ox.ac.uk/councilsec/privacy.shtml) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html lang="en"><head>
 <meta http-equiv="pragma" content="no-cache">
@@ -64,10 +64,23 @@
 
 
 
+<ul>
 
+<li><a href="/councilsec/index.shtml">Council Secretariat</a></li>
+<p>
+</p><li><a href="/councilsec/gov/council.shtml">Council</a></li>
+<p>
+</p><li><a href="/councilsec/gov/index.shtml">Governance: The New Structure</a></li>
+<p>
+</p><li><a href="/councilsec/oxonly/dp/index.shtml">The Data Protection Act</a></li>
+<p>
+</p><li><a href="/statutes/">Statutes and Regulations</a></li>
+<p>
+</p><li><a href="/curec/">Central University Research Ethics Committee (CUREC)</a></li>
+<p>
+</p><li><a href="/riskmgt/pandemic.shtml">Planning for a flu or other similar pandemic</a></li>
 
-
-
+</ul>
 
 
 
