barclaycard.co.uk (archived on 2006-06-15)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;economyandfinance",
  "char_count": 6060,
  "classifier_probability": 0.91,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.91,
  "homepage_snapshot_redirected_domain": "barclaycard.co.uk",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20060331214053id_/http://www2.barclaycard.co.uk/",
  "homepage_snapshot_url": "https://web.archive.org/web/20060331214053id_/http%3A//barclaycard.co.uk",
  "interval": "2006_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "barclaycard.co.uk",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20060615031922id_/http%3A//www2.barclaycard.co.uk/Customer_Service/About_Us/TandC/privacy_policy.html",
  "policy_title": "Barclaycard: Privacy Policy",
  "policy_url": "www2.barclaycard.co.uk/Customer_Service/About_Us/TandC/privacy_policy.html",
  "sha1": "ae8c2d66f537df1fb7c17eb7c07a507c8e31c130",
  "simhash": 13890036442647999914,
  "simhash_updated": false,
  "site_hostname": "barclaycard.co.uk",
  "site_url": "http://barclaycard.co.uk",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20060615031922",
  "word_count": 1036,
  "year": 2006
}

--- a/b/ba/bar/barclaycard.co.uk.html
+++ b/b/ba/bar/barclaycard.co.uk.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the barclaycard.co.uk privacy policy that was archived on 2005-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051216223449id_/http%3A//www.barclaycard.co.uk/Customer_Service/About_Us/TandC/privacy_policy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the barclaycard.co.uk privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615031922id_/http%3A//www2.barclaycard.co.uk/Customer_Service/About_Us/TandC/privacy_policy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
 
@@ -7,7 +7,7 @@
 
 <meta http-equiv="content-type" content="text/html; charset=iso-8859-1">
 <meta name="description" content="Privacy Policy: ">
-<meta name="keywords" content="UK credit card company,Barclaycard,Barclay,Barclays,online banking,financial services,secured loan,personal loan calculator,car loan,home loan,cheap loan,apply for credit card,debt consolidation,shopping,Woolwich,buying,household,credit card balance transfer,0 balance transfer credit card,credit card transfer,0 apr credit card,interest free credit card,credit card low apr,0%,low 0% apr,best credit card offer,platinum,gold,student,graduate,premiership,visa,mastercard,master card,credit card application,online account,glossary,terms,apr,balance transfer,interest rate,minimum repayment,promotional,purchase rate,balance transfer fee,help,Terms,conditions,agreement,regulated,consumer,act,1974,privacy,policy,personal,cookies,data,protection">
+<meta name="keywords" content="UK credit card company,Barclaycard,Barclay,Barclays,online banking,financial services,secured loan,personal loan calculator,car loan,home loan,cheap loan,apply for credit card,debt consolidation,shopping,Woolwich,buying,household,credit card balance transfer,0 balance transfer credit card,credit card transfer,0 apr credit card,interest free credit card,credit card low apr,0%,low 0% apr,best credit card offer,platinum,gold,student,graduate,premiership,visa,mastercard,master card,credit card application,Barclaycard business,business credit cards,business credit card,company Barclaycard,company credit cards,online account,glossary,terms,apr,balance transfer,interest rate,minimum repayment,promotional,purchase rate,balance transfer fee,help,Terms,conditions,agreement,regulated,consumer,act,1974,privacy,policy,personal,cookies,data,protection">
 
 <link rel="stylesheet" type="text/css" href="/xhtml-style.css" media="all">
  
@@ -21,40 +21,25 @@
 <a name="0top"></a>
 <div class="off-left"><a href="#titlebox" accesskey="2">Skip navigation</a></div>
 <div id="globalnav">
-
- <a href="/?previous_page_id=182&amp;link_type=CAT" accesskey="1">
- <img src="/media/gnb/home.gif" alt="Link to Home" width="36" height="14"></a>
-
- <img src="/media/gnb/line_wsbug.gif" alt="Divider line">
- <a href="/redirect.php?url=https%3A%2F%2Fbcol.barclaycard.co.uk%2Fecom%2Fas%2Faccountservicesinit%2Findex.jsp%3FMC%3D007YGZ&amp;exit_trk_id=40&amp;page_id=182&amp;previous_page_id=182&amp;link_type=TOP" target="_blank" title="Link to My Account (new window)">
- <img src="/media/gnb/my_account.gif" alt="Link to My Account (new window)" width="75" height="14"></a>
-
- <img src="/media/gnb/line_wsbug.gif" alt="Divider line">
- <a href="/Products/Apply/apply.html?previous_page_id=182&amp;link_type=CAT">
- <img src="/media/gnb/apply.gif" alt="Link to Apply" width="36" height="14"></a>
-
- <img src="/media/gnb/line_wsbug.gif" alt="Divider line">
- <a href="/Products/?previous_page_id=182&amp;link_type=CAT">
- <img src="/media/gnb/products.gif" alt="Link to Products" width="54" height="14"></a>
-
- <img src="/media/gnb/line_wsbug.gif" alt="Divider line">
- <a href="/Offers/?previous_page_id=182&amp;link_type=CAT">
- <img src="/media/gnb/offers.gif" alt="Link to Offers" width="38" height="14"></a>
-
- <img src="/media/gnb/line_wsbug.gif" alt="Divider line">
- <a href="/Customer_Service/?previous_page_id=182&amp;link_type=CAT">
- <img src="/media/gnb/customer_service.gif" alt="Link to Customer Service" width="109" height="14"></a>
-
+<a href="/?previous_page_id=182&amp;link_type=CAT" accesskey="1"><img src="/media/gnb/home.gif" alt="Link to Home" width="36" height="14"></a>
+<img src="/media/gnb/line_wsbug.gif" alt="Divider line">
+<a href="/redirect.php?url=https%3A%2F%2Fbcol.barclaycard.co.uk%2Fecom%2Fas%2Faccountservicesinit%2Findex.jsp%3FMC%3D007YGZ&amp;exit_trk_id=40&amp;page_id=182&amp;previous_page_id=182&amp;link_type=TOP"><img src="/media/gnb/your_account.gif" alt="Link to Your Account (new window)" width="87" height="14"></a>
+<img src="/media/gnb/line_wsbug.gif" alt="Divider line">
+<a href="/Products/Apply/apply.html?previous_page_id=182&amp;link_type=CAT"><img src="/media/gnb/apply.gif" alt="Link to Apply" width="36" height="14"></a>
+<img src="/media/gnb/line_wsbug.gif" alt="Divider line">
+<a href="/Products/?previous_page_id=182&amp;link_type=CAT"><img src="/media/gnb/products.gif" alt="Link to Products" width="54" height="14"></a>
+<img src="/media/gnb/line_wsbug.gif" alt="Divider line">
+<a href="/Offers/?previous_page_id=182&amp;link_type=CAT"><img src="/media/gnb/offers.gif" alt="Link to Offers" width="38" height="14"></a>
+<img src="/media/gnb/line_wsbug.gif" alt="Divider line">
+<a href="/Customer_Service/?previous_page_id=182&amp;link_type=CAT"><img src="/media/gnb/customer_service.gif" alt="Link to Customer Service" width="109" height="14"></a>
 </div>
 
-<div id="logo">
- <a href="/?previous_page_id=182&amp;link_type=TTL"><img src="/media/rebrand/barclaycardlogo_114x74.gif" width="114" height="74" alt="Barclaycard logo - link to home page"></a>
-</div>
+<div id="logo"><a href="/?previous_page_id=182&amp;link_type=TTL"><img src="/media/rebrand/barclaycardlogo_114x74.png" width="114" height="74" alt="Barclaycard logo - link to home page"></a></div>
 
 <div id="searchbox" align="right">
  <form action="/search_results.html">
   <label for="search" accesskey="4">
-    <img src="/media/gnb/search.gif" alt="Search the site" width="49" height="14" style="margin-top: 1px; vertical-align: top;">
+    <img src="/media/gnb/search.gif" alt="Search the site" width="49" height="14" style="margin-top:1px;vertical-align:top;">
   </label>
   <input type="text" name="search" id="search" size="10" alt="Type your search query here" style="width:80px;font-family:verdana, arial, sans-serif;color:#036;font-size:90%;border-color:#70C633 #70C633 #70C633;">
   <br>
@@ -206,8 +191,8 @@ customer service numbers quoted on this site</p>
 
 <!-- banners -->
 <div id="banners">
-	<a href="/redirect.php?url=http%3A%2F%2Fwww.companybarclaycard.co.uk%2F%3FMC%3D007YGZ&amp;exit_trk_id=611&amp;page_id=182&amp;banner_id=199&amp;previous_page_id=182&amp;link_type=BNR" target="_self"><img src="/media/banners/199.gif" width="190" height="104" alt="Company Barclaycard - Apply today"></a>
 	<a href="/redirect.php?url=%2FProducts%2FChip_and_Pin%2F%3FMC%3D007YGZ&amp;page_id=182&amp;banner_id=218&amp;previous_page_id=182&amp;link_type=BNR" target="_self"><img src="/media/banners/218.gif" width="190" height="104" alt="Find out more about Chip &amp; PIN"></a>
+	<a href="/redirect.php?url=http%3A%2F%2Fwww.companybarclaycard.co.uk%2F%3FMC%3D007YGZ&amp;exit_trk_id=611&amp;page_id=182&amp;banner_id=199&amp;previous_page_id=182&amp;link_type=BNR" target="_self"><img src="/media/banners/199.gif" width="190" height="104" alt="Company Barclaycard - Apply today"></a>
 	<a href="/redirect.php?url=%2FOffers%2FTravel%2F%3FMC%3D007YGZ&amp;page_id=182&amp;banner_id=217&amp;previous_page_id=182&amp;link_type=BNR" target="_self"><img src="/media/banners/217.gif" width="190" height="104" alt="Save pounds with Barclaycard Travel - Find out more"></a></div>
 
 <!-- footer -->
@@ -221,7 +206,7 @@ customer service numbers quoted on this site</p>
  <a href="/Customer_Service/Help/site_map/champion.html">Guides</a>
  </div>
  <br><br>
- © Barclaycard 2005
+ © Barclaycard 2006
 
 <!-- START NetRatings Measurement V5.1 -->
 <!-- COPYRIGHT 2003 NetRatings Limited -->
@@ -255,7 +240,7 @@ var _rsND=_rsLP+'//secure-uk.imrworldwide.com/';
 //-->
 </script><script language="JavaScript" type="text/javascript" src="https://www.barclaycard.co.uk/javascript/v51.js"></script>
 <noscript>
- <img src="//secure-uk.imrworldwide.com/cgi-bin/m?ci=barclaycard&amp;cg=0" alt="" />
+ <img src="http://secure-uk.imrworldwide.com/cgi-bin/m?ci=barclaycard&amp;cg=0" alt="" />
 </noscript>
 <!-- END RedMeasure V5.1 -->
  </div>
