valueline.com (archived on 2006-06-15)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;economyandfinance;education",
  "char_count": 5484,
  "classifier_probability": 0.99,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.66,
  "homepage_snapshot_redirected_domain": "valueline.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20060402213814id_/http://valueline.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20060402213814id_/http%3A//valueline.com",
  "interval": "2006_A",
  "link_text": "Privacy Statement",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "valueline.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20060615032432id_/http%3A//valueline.com/privacy.html",
  "policy_title": "Value Line",
  "policy_url": "valueline.com/privacy.html",
  "sha1": "d6d756f06b35a9fc135d78bb26e5418a149ab1b1",
  "simhash": 13312376022510569996,
  "simhash_updated": false,
  "site_hostname": "valueline.com",
  "site_url": "http://valueline.com",
  "smog": 14.7,
  "strict_updated": false,
  "timestamp": "20060615032432",
  "word_count": 896,
  "year": 2006
}

--- a/v/va/val/valueline.com.html
+++ b/v/va/val/valueline.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the valueline.com privacy policy that was archived on 2005-12-15.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051215120825id_/http%3A//valueline.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the valueline.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615032432id_/http%3A//valueline.com/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
 	<title>Value Line</title>
@@ -120,6 +120,15 @@ div.lmenuw
   color: white;
     } 
 
+.footer {text-align: center;
+
+        font-size: 10;
+
+    font-family: "helvetica", sans-serif;
+	font-weight: normal;
+	color: #c9ab73;
+    
+        }
 </style>
 	</head>
 
@@ -260,7 +269,8 @@ div.lmenuw
 <tbody><tr>
 <td>
 <table width="595" border="0" cellspacing="0" cellpadding="0" align="center">
-<tbody><tr><td align="center"><font face="Arial,sans-serif" size="-1">[<a href="/index.html">Home</a>]&nbsp; [<a href="/requirements.html">Site Requirements</a>]&nbsp; [<a href="/terms.html">Terms &amp; Conditions</a>]&nbsp; [<a href="/privacy.html">Privacy Statement</a>]&nbsp; [<a href="/support.html">Contact Us</a>] </font></td></tr>
+<tbody><tr><td class="footer" align="center">[<a href="/index.html">Home</a>]&nbsp; [<a href="/requirements.html">Site Requirements</a>]&nbsp; [<a href="/terms.html">Terms &amp; Conditions</a>]&nbsp; [<a href="/privacy.html">Privacy Statement</a>]&nbsp; [<a href="/support.html">Support</a>] </td></tr>
+<tr><td class="footer" align="center">[<a href="/education.html">Education</a>]&nbsp; [<a href="http://www.ec-server.valueline.com">Products &amp; Services</a>]&nbsp; [<a href="/secure/vlrc/research.html">Research Center</a>]&nbsp; [<a href="/why_use_what.html">About Value Line</a>]&nbsp; [<a href="/sitemap.html">Sitemap</a>] </td></tr>
 </tbody></table>
 
 </td>
